Manager and Seller functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.freemarker.template-loader-path=/
 spring.freemarker.suffix=.ftl
 
 #sping.jpa.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.show_sql=true
+spring.jpa.hibernate.show_sql=true
 #spring.jpa.hibernate.format_sql=true
-#spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.jdbc.batch_size=50
 #spring.jpa.hibernate.connection.CharSet=utf8
 #spring.jpa.hibernate.connection.characterEncoding=utf8
