--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
+            <version>1.1.3</version>
         </dependency>
 	</dependencies>
 
